fix login bottom labels overlapping the top <a> tag

--- a/themes/Coinsence/less/login.less
+++ b/themes/Coinsence/less/login.less
@@ -185,10 +185,10 @@
 
     .labels {
       position: absolute;
-      bottom: 30px;
+      bottom: 0;
 
       h6 {
-        padding: 20px;
+        padding: 0 20px 20px;
         text-align: center;
       }
 
